--- a/config/Web.properties
+++ b/config/Web.properties
@@ -1,3 +1,3 @@
 # Browser options {chrome, edge, firefox}
-URL= https://staging.mazaady.com/login
+URL= https://www.kaderapp.com/en/
 Browser=chrome
